# poetry-cookiecutter

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENCE.txt  pyproject.toml
